Fix app spacing

--- a/DiscordPlus.theme.css
+++ b/DiscordPlus.theme.css
@@ -43,11 +43,11 @@ h1, h2, .da-nameTag, .da-nameWrapper, .da-username, .da-emojiUploader, .da-title
 	--transparency-lightest: rgba(255,255,255,0.9);
 }
 
-.app {
-	bottom: 10px !important;
-	left: 10px !important;
-	right: 10px !important;
-	top: 10px !important;
+.da-app {
+	bottom: 15px !important;
+	left: 5px !important;
+	right: 15px !important;
+	top: 5px !important;
 }
 
 [style*="flex: 1 1 auto;"] > .da-container .da-friendsTable,
